# kordesii

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: CPUEmulation.md  DecoderDevelopment.md  DecoderInstallation.md  DecoderTesting.md
kordesii/: __init__.py  cli.py  core.py  decoder.py  ida_client.py  ida_server.py  kordesiiidahelper.py  kordesiireporter.py  kordesiitester.py  logutil.py  registry.py  reporter.py  serialization.py  tester.py
kordesii/config/: __init__.py  log_config.yml
kordesii/decoders/: Sample.py  Sample_StringDecode.py  StackStringsNG.py  stack_string.py  stack_string_StringDecode.py
kordesii/decoders/tests/: Sample.json
kordesii/decodertests/: Sample.json  strings.c
kordesii/tools/: client.py  kordesii_client.py  kordesii_server.py  kordesii_test.py  kordesii_tool.py  test.py  tool.py
kordesii/tools/server/: __init__.py  server.py
kordesii/utils/: __init__.py  decoderutils.py  flowchart.py  function_creator.py  functioncreator.py  functions.py  ida_re.py  idayara.py  kordesiiidautils.py  segments.py  strings.py  tracing.py  tracingutils.py  utils.py  yara.py
kordesii/utils/function_tracing/: __init__.py  utils.py  (+18 more)
tests/: conftest.py  ida_stub.py  test_cli.py  test_decoder.py  test_decoderutils.py  test_function_tracing.py  test_ida_proxy.py  test_issues.py  test_registry.py  test_serializer.py  test_server.py  test_strings.py  test_utils.py
tests/test_function_tracing/: test_cpu_context.py  test_flowchart.py  test_memory.py  test_operands.py  test_registers.py
(+34 files in other folders)
