[metadata]
version = 2.0.1
description = A framework for decoding encoded strings and files in malware via IDA Pro IDAPython scripting.
long-description-content-type = text/markdown
long-description = file:README.md

[tool:pytest]
script_launch_mode = subprocess
norecursedirs = docs  build *.egg-info .git .nox .pytest_cache
testpaths = tests
markers =
    in_ida: marks tests to be run within IDA (using strings.exe)
    serial
