[metadata]
version = 2.5.0
description = A framework for decoding encoded strings and files in malware via IDA Pro IDAPython scripting.
long-description-content-type = text/markdown
long-description = file:README.md

[tool:pytest]
script_launch_mode = subprocess
norecursedirs = docs  build *.egg-info .git .nox .pytest_cache
testpaths = tests
markers =
    in_ida: marks tests to be run within IDA (using strings.exe)
    serial
    in_ida_x86: marks tests to be run within IDA (using strings.exe)
    in_ida_arm: marks tests to be run within IDA (using strings_arm)
